--- a/html/index.html
+++ b/html/index.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="OpenStreetMap, then and now side by side" />
-  <script src="http://cdn.leafletjs.com/leaflet/v1.3.1/leaflet.js"></script>
+  <script src="https://cdn.leafletjs.com/leaflet/v1.3.1/leaflet.js"></script>
   <script src="leaflet-side-by-side.js"></script>
   <script src="leaflet-hash.js"></script>
   <script src="L.Control.Geonames.js"></script>
-  <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v1.3.1/leaflet.css" />
+  <link rel="stylesheet" href="https://cdn.leafletjs.com/leaflet/v1.3.1/leaflet.css" />
   <link rel="stylesheet" href="L.Control.Geonames.css" />
   <link rel="stylesheet" href="style.css" />
 </head>
