--- a/html/index.html
+++ b/html/index.html
@@ -27,12 +27,12 @@
     <script>
     var map = L.map('map').setView([1.3227, 103.8498], 13);
 
-    var osmLayer = L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
-        attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap<\/a> contributors'
+    var osmLayer = L.tileLayer('https://{s}.tile.osm.org/{z}/{x}/{y}.png', {
+        attribution: '&copy; <a href="https://osm.org/copyright">OpenStreetMap<\/a> contributors'
     }).addTo(map);
 
-    var vintageLayer = L.tileLayer('http://tile.rtijn.org/tile/{z}/{x}/{y}.png', {
-        attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap<\/a> contributors'
+    var vintageLayer = L.tileLayer('https://tile.rtijn.org/tile/{z}/{x}/{y}.png', {
+        attribution: '&copy; <a href="https://osm.org/copyright">OpenStreetMap<\/a> contributors'
     }).addTo(map)
 
     // Enable side by side control
