add safari note, font change

--- a/html/index.html
+++ b/html/index.html
@@ -18,7 +18,7 @@
         <div id="title" onclick=collapse()>OSM Then and Now</div>
         <div id="collapsible">
             <div id="sub">Explore OSM how it was in 2008 (left) and compare with how it is now (right). Use the slider to reveal more the one or the other. This is what a community of mappers can accomplish. If you enjoy using OpenStreetMap data, please consider a <a href="https://wiki.osmfoundation.org/wiki/Donate" target="_blank">donation to the OpenStreetMap Foundation</a>.</div>
-            <div id="schmall">A thing by Martijn van Exel, source and instructions how to roll your own <a href="https://github.com/mvexel/openstreetmap-vintage-tile-server" target="_blank">on Github</a></div>
+            <div id="schmall">A thing by Martijn van Exel, source and instructions how to roll your own <a href="https://github.com/mvexel/openstreetmap-vintage-tile-server" target="_blank">on Github</a>. <strong>This site is currently broken on Safari, see <a href="https://github.com/mvexel/thenandnow/issues/10" target="_blank">this ticket</a>.</strong></div>
         </div>
     </div>
     <div id='map'></div>
