--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,7 @@
     <div id="lilbox">
         <div id="title">OSM Then and Now</div>
         <div id="sub">Explore OSM how it was in 2008 (left) and compare with how it is now (right). Use the slider
-            to reveal more of the one or the other.<br>Help me keep this website up by <a href="https://buymeacoffee.com/3lqho1lkks">supporting me</a> with a few bucks. Thanks!</div>
+            to reveal more of the one or the other. <em><a href="redacted-note.txt">A note about this data</a></em><br>Help me keep this website up by <a href="https://buymeacoffee.com/3lqho1lkks">supporting me</a> with a few bucks. Thanks!</div>
         <div class="share-buttons">
             <button class="share-button" onclick="copyToClipboard()">Copy Link</button>
             <a class="share-button" href="#" onclick="shareToSocial('twitter')">Share on Twitter</a>
